-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 10.1, 10.2, 10.3, 10.4, 10.5
-
Component/s: Replication, Tests
-
Labels:
mtr --repeat=10 rpl.rpl_parallel2 sometimes hangs in 10.5
It works in 10.4.
The problem in 10.5 started after a merge from 10.3 -> 10.5 on 2 of July that enabled the test in
10.5. The issue is probably because of the slightly different implementation of FLUSH TABLES WITH READ LOCK in 10.5 compared to 10.4
The hangs happens in reap of "FLUSH TABLES WITH READ LOCK" at line
157 in suite/rpl/t/rpl_parallel2.test
Other things:
- The comments in ba02550166eb39c0375a6422ecaa4731421250b6 may be useful to find and fix the bug
- The code for flush_tables_with_read_lock is in sql_reload.cc. I would suggest that one looks at the differences
between the functions in 10.4 and 10.5 to try to find out what is going on.
- relates to
-
MDEV-23381 rpl_parallel2 fails in 10.1 to 10.3 if slave_parallel_mode is changed to optimistic
-
- Closed
-