MDEV-23089 rpl_parallel2 fails in 10.5

Problem:- rpl_parallel2 was failing non-deterministically

Analysis:-
  So when we issue FTWRL. Worker thread will be waiting in do_ftwrl_wait().
  Then from other connection we issue STOP SLAVE , which turn force_abort = 1
  So we exit out of loop in do_fterl_wait(). Then we get deadlock further down
  the execution path.
Solution:-
  We will assign 1 to skip_event_group when we are aborted in do_ftwrl_wait.
  And rpl_parallel_entry->pause_sub-id is only reset when force_abort is off
  in rpl_pause_after_ftwrl